--- a/style Tp5.css
+++ b/style Tp5.css
@@ -1,112 +1,3 @@
-/*body{
-    background-color: black;
-}
-#moonshine{
-    color: green;
-}
-.credict{
-  font-family: "Londrina Sketch", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: white;
-}
-h5{
-    font-family: "Londrina Sketch", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: green;
-  padding-left: 28px;
-}
-.h1{
-    font-size: x-large;
-    line-height: 0.6;
-}
-h6{
-    color: white;
-}
-img{
-    width: 40%;
-    padding-right: 20px;
-    position: absolute;
-    right: 60px;
-    top: 130px;
-    transform: rotate(30deg);
-}
-.content{
-    display: flex;
-    justify-content: space-between;
-}
-.box{
-    flex: 1;
-    width: 100%;
-    height: 100%;
-}
-#gauche{
-    padding-left: 30px;
-    line-height: 2;
-
-}
-    
-#book{
-    border-radius: 30px;
-    background-color: dodgerblue;
-    padding: 5px;
-    text-decoration: none;
-    color: white;
-    margin-top: 100px;
-   
-}
-header{
-    display: flex;
-    justify-content: space-between;
-}
-#h{
-    padding-right: 30px;
-}
-#droite{
-    background-color: green;
-    margin-right: 80px;
-    height: 300px;
-    border-top-left-radius:75% ;
-    border-bottom-right-radius: 75% ;
-    margin-top: 20px; 
-    width:100%;
-
-}
-#bcp{
-    position: absolute;
-    right: 40px;
-    top: 25px;
-}
-@media screen and (max-width:725px){
-    body{
-        width: 100%;
-        height: 100%;
-    }
-    
-}
-@media screen and (min-width:900px){
-    body{
-        width: 100%;
-        height: 100%;
-        font-size: 150%;
-    }
-    img{
-        width: 40%;
-        padding-top: 50px;
-    }
-    #droite{
-       width: 100px;
-       height: 500px;
-       padding-top: 50px;
-    }
-    .content{
-        font-size: 130%;
-    }
-    .h1{
-        font-size: 150%;
-    }
-}*/
 body{
     background-color: black;
 }
@@ -137,7 +28,7 @@ h6{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 230px;
+    gap: 45%;
 }
 .tete a{
     text-decoration: none;
@@ -146,7 +37,6 @@ h6{
 }
 img{
     width: 100%;
-    position: relative;
 }
 .content{
     display: flex;
@@ -160,8 +50,8 @@ img{
     height: 35vh;
     background-color: goldenrod;
     border: 1px solid;
-    border-top-left-radius: 210px;
-    border-bottom-right-radius: 160px;
+    border-top-left-radius:70%;
+    border-bottom-right-radius:60%;
 }
 .content a{
     text-decoration: none;
@@ -170,33 +60,62 @@ img{
     padding-left: 15px;
     padding-right: 15px;
     color: aliceblue;background-color: crimson;
-    
 }
 .content a:hover{
     background-color: aliceblue;
     color: crimson;
 }
-@media screen and (min-width:481px) and     (max-width:768px) {
+@media screen and (max-width:321px){
+    .tete{
+        justify-content: space-around;
+    }    
+}
+@media screen and (min-width:481px) and  (max-width:768px) {
     
     .tete{
         display: flex;
-        gap:500px;
+        /*gap:500px;*/
+        gap:63%;
     }
     .content{
         text-align: left;
         justify-content: space-around;
     }
 }
-@media screen and (min-width:768px){
+@media screen and (min-width:769px){
+    body{
+    }
     .tete{
+        margin-left: 1%;
+        margin-right: 1%;
         display: flex;
-        gap:500px;
+        gap:65%;
+        font-size: 170%;
     }
     .content{
         text-align: left;
-        justify-content: space-around;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 30px;
+        padding-right: 30px;
+        font-size: xx-large;
+        flex-wrap: nowrap;
+        margin-left: 1%;
+        margin-right: 1%;
     }
+    .h1{
+        font-size: 100%;
+    }
+    #droite{
+        width: 50%;
+        height: 100%;
+        border-bottom-right-radius: 50% ;
+    }  
 }
+
+
+
+
 
 
 
